# Spaceborne

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  compare_pk_responses.py  config.yaml  config_dev.yaml  config_public.yaml  config_release.yaml  environment-dav.yml  environment-release.yml  environment-test2.yml  environment.yaml  environment.yml  environment_ccl_main_GSLfix.yml  environment_ccl_v3.yml  environment_linux.yaml  environment_linux.yml  environment_macOS.yaml  example_cfg.yaml  example_config.yaml  example_notebook.ipynb  git_find_big.sh  main.ipynb  main.py  main_jxt.ipynb  main_jxt.py  main_public.py  main_release.py  plot_constraints.py  pyproject.toml
bins/: FM_running.py  utils_running.py
common_cfg/: ISTF_fid_params.py  ISTF_fiducial_params.yml  SPV3_fiducial_params_magcut245_zbins03.yml  SPV3_fiducial_params_magcut245_zbins05.yml  SPV3_fiducial_params_magcut245_zbins07.yml  SPV3_fiducial_params_magcut245_zbins09.yml  SPV3_fiducial_params_magcut245_zbins11.yml  SPV3_fiducial_params_magcut245_zbins13.yml  SPV3_fiducial_params_magcut245_zbins15.yml  mpl_cfg.py
config/: ISTF_fid_params.py  ISTF_fid_params_macsymlink_important.py  common_config.py  mpl_cfg.py  mpl_cfg_macsymlink_important.py
docs/: Makefile  requirements.txt
input/: Sijkl  cl_gg.txt  cl_gl.txt  cl_ll.txt  config_3x2pt_pure_Cell_general.ini  everyones_WF_from_Gdrive  gal_bias_3bins.txt  gal_bias_const_per_bin.txt  ind_files  sylvain  vincenzo
input_main_take2/: gal_bias.txt
jobs/: __init__.py
lib/: cosmo_lib.py  cosmo_lib_macsymlink_important.py  my_module.py
(+2726 files in other folders)
