[tool.poetry]
name = "Spaceborne"
version = "0.1.0"
description = "Code to compute the harmonic-space Gaussian and non-Gaussian covariances for the 3x2pt photometrix survey."
authors = ["davidesciotti <84071067+davidesciotti@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.0"
numpy = "^1.26.4"
scipy = "^1.13.1"
pandas = "^2.2.2"
tqdm = "^4.66.4"
PyYAML = "^6.0.1"
astropy = "^6.1.0"
joblib = "^1.4.2"
numba = "^0.59.1"
camb = "^1.5.0"
getdist = "^1.4.0"
pyccl = {git = "https://github.com/davidesciotti/CCL.git", rev = "master"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
