[tool.poetry]
name = "Spaceborne"
readme = "README.md"
version = "0.1.0"
#license = "MIT License"
description = "Code to compute the harmonic-space Gaussian and non-Gaussian covariances for the 3x2pt photometric survey."
authors = ["davidesciotti <84071067+davidesciotti@users.noreply.github.com>"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.format]
# Prefer single quotes over double quotes.
quote-style = "single"